# ft_printf

./: CMakeLists.txt  Makefile  base.c  cast_mod.c  cast_mod_base.c  cast_mod_contn.c  cast_nnnnn.c  cast_standart_for_base.c  castflag_bigC.c  castflag_bigS.c  castflag_bigc.c  castflag_c.c  castflag_s.c  castpress_bigS.c  castpress_s.c  checkcan.c  createres.c  do_format.c  dowchar_t.c  ft_itoa_base.c  ft_null.c  ft_printf.c  ft_printf.h  ft_putstrnew.c  main.c  minusmissing.c  minuspresent.c  numnull.c  otherutf.c  preox.c  printhesh.c  searcharg.c  startformat.c  upperarg.c  utflen.c  writepress.c  writewchar_t.c  writewidth.c  writezero.c
